--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.1",
+    "apollo-boost": "^0.1.22",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.2",
+    "graphql": "^14.0.2",
     "react": "^16.8.6",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel reactstart webservice",
+    "reactstart": "react-scripts start",
+    "webservice": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,5 +38,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chokidar": "^2.0.4",
+    "connect-history-api-fallback": "^1.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "faker": "^4.1.0",
+    "json-server": "^0.14.2",
+    "jsonwebtoken": "^8.1.1",
+    "npm-run-all": "^4.1.3"
   }
 }
